welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:12: error: type mismatch;
 found   : Unit
 required: Array[java.awt.Color]
  for (i <-0 to taille - 1)
         ^Array2:21: error: not found: value c
  c = T((0+decalge)%taille)
  ^Array2:22: error: missing arguments for method setCouleurBrosse in class AbstractBuggle;
follow this method with `_' if you want to treat it as a partially applied function
  setCouleurBrosse
  ^Array2:27: error: not found: value c
      c = T((i+decalge)%taille)
      ^Array2:28: error: missing arguments for method setCouleurBrosse in class AbstractBuggle;
follow this method with `_' if you want to treat it as a partially applied function
  setCouleurBrosse
  ^Array2:42: error: not found: value T
  T = met_couleur_tableau()
  ^Array2:49: error: not found: value T
      coloriage(T,decalage)
                ^